--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"elm": "^0.19.1-6",
-		"elm-review": "^2.13.1",
+		"elm-review": "^2.13.3",
 		"elm-test": "^0.19.1-revision12",
-		"esbuild": "0.17.3",
+		"esbuild": "^0.25.6",
 		"esbuild-plugin-elm": "^0.0.12",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
-	}
+	},
+  "overrides": {
+    "cross-spawn": "^7.0.0"
+  }
 }
